加入各新檔案，待整理註解

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_REACT_APP_API_URL=https://ec-course-api.hexschool.io/
-VITE_REACT_APP_API_PATH=hotmaneil
+VITE_APP_ApiUrl=https://ec-course-api.hexschool.io/
+VITE_APP_ApiPath=hotmaneil
