--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://ec-course-api.hexschool.io/
-REACT_APP_API_PATH=hotmaneil
+VITE_APP_ApiUrl=https://ec-course-api.hexschool.io/
+VITE_APP_ApiPath=hotmaneil
